重构common模块 --> business业务 、 security 安全 完成版(没有二级缓存)